--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,27 @@
         android:theme="@style/Theme.CovrDesignTest.NoActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".CardTransfer"
+            android:exported="false" />
+        <activity
+            android:name=".CashTransfer"
+            android:exported="false" />
+        <activity
+            android:name=".AccountOpeningOptions"
+            android:exported="false" />
+        <activity
+            android:name=".BillsPaymentActivity"
+            android:exported="false" />
+        <activity
+            android:name=".FundsTransferActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AllTransactionsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EarningsActivity"
+            android:exported="false" />
+        <activity
             android:name=".AccountOpeningActivity"
             android:exported="false" />
         <activity
